2001-12-24  Martin Weber <martweb@gmx.net>

	* vector.c (magnitude): replaced hypot.

	(Message-ID: <14237.1013082801@www56.gmx.net>).
	
2002-02-06  Masatake YAMATO  <yamato@redhat.com>

	* configure.in (AC_CHECK_LIB): Put '[', ']' to nested macro
	invocations.

2002-02-05  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (EXTRA_DIST): Removed vc++6.0.txt.

2002-02-04  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (pkgconfig_DATA, pkgconfigdir): 
	Added pkgconfig supprots.

	* configure.in: Likewise.

	* autotrace.pc.in: New file.

	* main.c (dot_printer): Rewrite.
	(main): print an input file name and newline when 
	report_progress is true.
	(main::progress_stat): Make int.
	(dot_printer_max_column, dot_printer_char): New defs.

2002-01-31  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (man_MANS): Added autotrace.1.

	* autotrace.1: Contributed by R. P. C. Rodgers<rodgers@nlm.nih.gov>.

2002-01-30  Masatake YAMATO  <yamato@redhat.com>

	* configure.in (AC_CHECK_LIB(png)): Added -lm.

2002-01-27  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_splines_new_full): Set progress 1.0
	at the end of this function.

	* main.c (dot_printer): Style of progress report
	is changed.

	* xstd.h (XREALLOC): Remove the last backslash
	at XREALLOC. This is my typo.

2002-01-23  Masatake YAMATO  <yamato@redhat.com>

	* xstd.h: Use assert instead of FATAL.

	* input-pnm.c (pnm_load_image): Use
	fopen instead of xfopen. Use fclose instead
	of xfclose.

2001-12-24  Martin Weber <martweb@gmx.net>

	* vc++6.0.txt: Removed.
	Message-ID: <3C4C7155.934E0C5D@gmx.net>.

	* autotrace.vcproj: Added exception.[ch].

	* autotrace.dsp: Likewise.

	Message-ID: <3C4C70AF.60741033@gmx.net>.
	
2002-01-23  Masatake YAMATO  <yamato@redhat.com>

	* main.c (USAGE1::dpi): Write about emf.
	Suggested by Stewart C. Russell <stewart@ref.collins.co.uk>.

2002-01-19  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_bitmap_init): XMALLOC->XCALLOC 
	again.